k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - name: http
      port: 80
      targetPort: http
